Fixed footer overlap issue

--- a/css/tsa.css
+++ b/css/tsa.css
@@ -686,7 +686,7 @@ section.--toc-section:last-child .arrow {
 
 .footer .footer-inner-right {
 	background: #3a373e;
-	z-index: 4;
+	z-index: 1;
 	width: 30%;
 	padding-left: 90px;
 	padding-top: 60px;
